--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "font-awesome": "^4.7.0",
     "gsap": "^3.13.0",
     "ogl": "^1.0.11",
